# hunter-research

./: .env.example  .gitignore  EMPIRICAL_FINDINGS.md  HUNTER_SPEC_v2.md  HUNTER_STORY.md  HUNTER_System_Architecture.md  LAUNCH_POST.md  LICENSE  LICENSE_DATA  README.md  THEORY_CANON.md  adversarial_residual_classifier.py  adversarial_self_test.py  backfill_embeddings.py  backfill_implications.py  backfill_telemetry.py  bayesian_alpha.py  belief_decomposer.py  build_story_pdf.py  calibration.py  chain_decay_fitter.py  chain_to_causal_edges.py  clear_hypotheses.py  config.py  cycle_chain_detector.py  cycle_detector.py  cycle_portfolio.py  database.py  enrich_thesis.py  expiration_tracker.py  formula_validator.py  frontier_hypotheses.py  generate_report.py  halflife_estimator.py  hunter.py  hunter_dashboard.py  inverse_hunter.py  kill_failure_mapper.py  master_dashboard.py  meta_hunter.py  (+35 more)
.github/workflows/: test.yml
docs/: DATA_OVERVIEW.md  EMPIRICAL_FINDINGS.md  HUNTER_STORY.md  HUNTER_THEORY.md  LIMITATIONS.md  MATH_VERIFICATION.md  THEORY_CANON.md  diamond_theses.md  engineering_evolution.md  index.html  pre_freeze_findings_summary.md  predictions.json  research_themes.md
launch/: README_github.md  ZENODO_description.md  methodology_brief.md  substack_post_1.md  x_thread.md
papers/: paper_2_immune_system.md  paper_3_non_zero_residual.md  paper_4_composition_test.md  paper_5_mechanism_monopoly.md  paper_6_computational_collapse.md
tests/: conftest.py  test_bayesian_alpha.py  test_collision_formula.py  test_cycle_detector.py  test_depth_value.py  test_narrative_detector.py  test_obscurity.py  test_residual_tam.py  test_thesis_dedup.py
